--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exchange-rates-api",
+  "name": "@tigranyeritsyan/exchange-rates-api",
   "version": "1.1.1",
   "description": "An API wrapper around exchangeratesapi.io",
   "main": "src/index.js",
